--- a/src/app/components/navabar/navabar.component.html
+++ b/src/app/components/navabar/navabar.component.html
@@ -1,1 +1,5 @@
-<p>navabar works!</p>
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <span class="navbar-brand">{{titulo}}</span>
+  </div>
+</nav>
