--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,1 +1,28 @@
-<p>formulario works!</p>
+<div class="jumbotron mt-5">
+  <h2 class="heading">Filtra Noticias por Pais y Categoria</h2>
+  <div class="row mt-3">
+    <div class="col-lg-8 offset-lg-2">
+      <form>
+        <div class="form-group">
+          <select name="categoria" class="form-select form-select-lg">
+            <option>General</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <select name="pais" class="form-select form-select-lg">
+            <option>Argentina</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
+        </div>
+      </form>
+      <button class="btn btn-primary btn-block btn-lg">Buscar</button>
+    </div>
+  </div>
+</div>
