--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navabar [titulo]="'Buscador de Noticias'"></app-navabar>
   <div class="container">
-    <app-formulario></app-formulario>
+    <app-formulario (parametrosSeleccionados)="buscarNoticias($event)"></app-formulario>
+    <app-listado-noticias></app-listado-noticias>
     </div>
